# cmake_rpi_cross

./: CMakeLists.txt  README.md  foo.cpp  toolchain-rpi.cmake
